--- a/index.html
+++ b/index.html
@@ -2,42 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/main.css">
   <title>Frontend Mentor | Expenses chart component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="js/main.js" defer></script>
 </head>
 <body>
 
-  My balance
-  $921.48
-
-  Spending - Last 7 days
-
-  mon
-  tue
-  wed
-  thu
-  fri
-  sat
-  sun
-
-  Total this month
-  $478.33
-
-  +2.4%
-  from last month
+  <main>
+    <header>
+      <div class="balance-box">
+        <small>My balance</small>
+        <p><strong>$921.48</strong></p>
+      </div>
+      <img src="images/logo.svg" alt="">
+    </header>
+  
+    <section>
+      <h1>Spending - Last 7 days</h1>
+      <div class="chart-box">
+        <canvas id="chart"></canvas>
+      </div>
+      <footer>
+        <div class="left">
+          <small>Total this month</small>
+          <h2>$478.33</h2>
+        </div>
+      
+        <div class="right">
+          <strong>+2.4%</strong>
+          <p><small>from last month</small></p>
+        </div>
+      </footer>
+    </section>
+  </main>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <span>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. </span>
+    <span>Coded by <a href="https://github.com/Diogovx">Diogo Velozo Xavier</a>.</span>
   </div>
 </body>
 </html>
